# pychromeless

./: .cursorrules  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  TESTING.md  backfill_daily_sales.py  chrome-installer.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
Docs/: TaskStatus.md  backlog.md
frontend/: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  build.ts  bunfig.toml  dev-server.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  daily-sales.spec.ts  task-history.spec.ts
frontend/playwright-report/: index.html
frontend/public/: .htaccess  CLAUDE.md
frontend/public/.well-known/pki-validation/: 775C2912DE8FD44248D47E80F367872F.txt
frontend/src/: App.tsx  CLAUDE.md  assets.d.ts  authConfig.ts  bun-env.d.ts  index.css  main.tsx  msal.ts  routes.e2e.tsx  routes.tsx
frontend/src/components/: CLAUDE.md  DataDisplay.tsx  ErrorBoundary.tsx  StoreMap.tsx  StoreMapData.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/dashboard/: TaskHistoryCard.tsx
frontend/src/components/features/: DateAndPayPeriodControl.tsx  Feature.tsx  JosiahAlert.tsx  UnlinkedDepositsSection.tsx  constants.ts  types.ts  useFormHandler.ts
frontend/src/components/features/__tests__/: UnlinkedDepositsSection.test.tsx
frontend/src/components/layout/: AppShell.tsx  CLAUDE.md  Footer.tsx  NavBar.tsx  PageLayout.tsx  Sidebar.tsx  index.ts
frontend/src/components/notifications/: TaskNotificationCard.tsx  TaskNotifications.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  checkbox.tsx  file-input.tsx  form.tsx  image-placeholder.tsx  index.ts  input.tsx  label.tsx  month-picker.tsx  radio-group.tsx  spinner.tsx  toast.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: useToast.ts
frontend/src/pages/: About.tsx  AboutNext.tsx  CLAUDE.md  Careers.tsx  Dashboard.tsx  Landing.tsx  POS.tsx  StoreMap.tsx
frontend/src/pages/financial/: BillSplit.tsx  DailySales.tsx  FdmsImport.tsx  GrubhubImport.tsx  InvoiceSync.tsx
frontend/src/pages/financial/__tests__/: FdmsImport.test.tsx
frontend/src/pages/payroll/: EmailTips.tsx  MPVs.tsx  PayrollAllocation.tsx  TransformTips.tsx
frontend/src/pages/payroll/__tests__/: TransformTips.test.tsx
frontend/src/pages/settings/: QBCallback.tsx  QuickBooksConnection.tsx
frontend/src/pages/utilities/: ErrorTester.tsx  FoodHandlerLinks.tsx
frontend/src/services/: TaskStatusService.ts  WebSocketService.ts
frontend/src/services/__tests__/: WebSocketService.test.ts
frontend/src/stores/: taskStore.ts
frontend/src/stores/__tests__/: taskStore.test.ts
frontend/src/test-utils/: MockMsalProvider.tsx  bun-setup.ts  bun-test.d.ts  happy-dom-register.ts  mockTaskStore.ts  setup.ts  test-helpers.ts  test-providers.tsx
frontend/src/utils/: claimUtils.ts  logger.ts  taskUtils.tsx
scripts/: check-prerequisites.sh  deploy-docker.sh  deploy-frontend.sh  deploy-terraform.sh  install-lambda-deps.sh
src/: README.md  audit_daily_journals.py  auth_utils.py  behind_the_counter.py  bls_report.py  crunchtime.py  decimal_utils.py  doordash.py  email_service.py  email_templates.py  ezcater.py  fdms_statement.py  flexepos.py  grubhub.py  import_grubhub_csv.py  lambda.tf  lambda_function.py  logging_utils.py  missing_sales.py  operation_types.py  payroll_allocation.py  postmates.py  progress_tracker.py  pytest.ini  qb.py  qbo.py  rerun_daily_journals.py  sample.html  square_catalog.py  square_images.py  ssm_parameter_store.py  store_config.py  sync_pos_to_square.py  task_status.py  tips.py  tips_processing.py  ubereats.py  validate_token.py  verify_payroll_allocation.py  webdriver.py  (+6 more)
src/tests/: conftest.py  test_qb.py  test_tips.py
src/tests/unit/: test_decimal_utils.py  test_email_templates.py  test_fdms_statement_import.py  test_olo_dates.py  test_payroll_allocation.py  test_progress_tracker.py  test_qb.py  test_square_catalog.py  test_store_config.py  test_timeout_detector_handler.py  test_tips.py  test_unlinked_deposits_handler.py  test_websocket_handlers.py  test_websocket_manager.py
src/typings/quickbooks/: __init__.pyi  client.pyi  exceptions.pyi  mixins.pyi  utils.pyi
src/typings/quickbooks/objects/: __init__.pyi  account.pyi  attachable.pyi  base.pyi  batchrequest.pyi  bill.pyi  billpayment.pyi  budget.pyi  changedatacapture.pyi  company_info.pyi  companycurrency.pyi  creditcardpayment.pyi  creditcardpayment_entity.pyi  creditmemo.pyi  customer.pyi  customertype.pyi  department.pyi  deposit.pyi  detailline.pyi  employee.pyi  estimate.pyi  exchangerate.pyi  invoice.pyi  item.pyi  journalentry.pyi  payment.pyi  paymentmethod.pyi  preferences.pyi  purchase.pyi  purchaseorder.pyi  recurringtransaction.pyi  refundreceipt.pyi  salesreceipt.pyi  tax.pyi  taxagency.pyi  taxcode.pyi  taxrate.pyi  taxservice.pyi  term.pyi  timeactivity.pyi  (+4 more)
terraform/: api_gateway.tf  cloudwatch_event.tf  data.tf  data.tf.sav  dynamodb.tf  frontend.tf  iam.tf  lambda.tf  main.tf  monitoring.tf  s3.tf  ssm.tf  ssm.tf.sav  terraform.tfvars.template  variables.tf  varriables.tf  versions.tf  ws-api-gateway.tf  ws-lambda.tf
terraform/helpers/: import_ssm.sh
