[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "josiah"
version = "1.0.0"
description = "WMC Automation Platform - Serverless automation for syncing POS, delivery, and inventory data to QuickBooks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Wagoner Management Corp", email = "team@wagonermgmt.com"},
]
keywords = ["automation", "quickbooks", "pos", "lambda", "serverless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "selenium>=4.15.2",
    "requests-oauthlib>=1.2.0",
    "python-quickbooks>=0.9.11",
    "urllib3>=1.26.19",
    "oauthlib>=3.0.1",
    "botocore>=1.12.134",
    "boto3",
    "beautifulsoup4",
    "wheniwork",
    "openpyxl",
    "google-api-python-client",
    "google-auth-httplib2",
    "icecream",
    "pyjwt",
    "cryptography",
    "pandas",
    "pypdf2",
    "pdfplumber",
    "python-json-logger",
    "python-dotenv",
    "mypy-boto3-dynamodb>=1.34.0",
    "mypy-boto3-apigatewaymanagementapi>=1.34.0",
    "webdriver-manager>=4.0.1",
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",  # parallel testing
    # Mocking libraries for external services
    "requests-mock>=1.10.0",
    "responses>=0.23.0",
    # Time/date mocking for testing
    "freezegun>=1.2.0",
    # Property-based testing (for complex financial calculations)
    "hypothesis>=6.0.0",
]
quality = [
    # Code formatting and linting
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    # Additional linting tools
    "pylint>=3.0.0",
    "bandit>=1.7.0",  # Security linting
    "safety>=2.3.0",  # Dependency vulnerability scanning
    "flake8-docstrings>=1.7.0",  # Docstring linting
    "flake8-import-order>=0.18.0",  # Import order checking
    "flake8-bugbear>=23.0.0",  # Additional bug-finding checks
]
all = [
    "josiah[dev,quality]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests that may be skipped in CI",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "src/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
exclude = [
    "build/.*",
    "dist/.*",
    ".venv/.*",
    "venv/.*",
    "__pycache__/.*",
    ".git/.*",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["src/tests"]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls

[tool.pylint.main]
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.typing",
]
ignore-paths = [
    "build/.*",
    "dist/.*",
    ".venv/.*",
    "venv/.*",
    "__pycache__/.*",
    ".git/.*",
    "src/typings/.*",
]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "import-error",  # Handled by mypy
    "no-member",     # Handled by mypy
]

[tool.pylint.format]
max-line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "D100",  # Missing docstring in public module - temporarily ignore
    "D101",  # Missing docstring in public class - temporarily ignore
    "D102",  # Missing docstring in public method - temporarily ignore
    "D103",  # Missing docstring in public function - temporarily ignore
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D200",  # One-line docstring should fit on one line
    "D202",  # No blank lines allowed after function docstring
    "D205",  # 1 blank line required between summary line and description
    "D400",  # First line should end with a period - temporarily ignore
    "D401",  # First line should be in imperative mood - temporarily ignore
    "D403",  # First word should be properly capitalized
    "D419",  # Docstring is empty
    "I100",  # Import statements are in the wrong order - temporarily ignore
    "I201",  # Missing newline between import groups - temporarily ignore
    "F401",  # Module imported but unused - fix these gradually
    "B007",  # Loop control variable not used - fix these gradually
    "E501",  # Line too long - fix these gradually with black
    "B001",  # Do not use bare except - HIGH PRIORITY to fix
    "E722",  # Do not use bare except - HIGH PRIORITY to fix
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__.py files
    "conftest.py:F401,F811",  # Allow fixture redefinitions
    "test_*.py:D100,D101,D102,D103",  # Don't require docstrings in tests
]
